{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 12,
  "lineage": "69ea60e4-e317-8e43-6a2c-43fc92d249d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec4e7657e6f0c73",
            "arn": "arn:aws:ec2:us-east-1:458419607076:elastic-ip/eipalloc-0dec4e7657e6f0c73",
            "domain": "vpc",
            "id": "eipalloc-0dec4e7657e6f0c73",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-239-9-241.compute-1.amazonaws.com",
            "public_ip": "34.239.9.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP",
              "Owner": "Vinod"
            },
            "tags_all": {
              "Name": "EIP",
              "Owner": "Vinod"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:internet-gateway/igw-088310bb91dd11a7d",
            "id": "igw-088310bb91dd11a7d",
            "owner_id": "458419607076",
            "tags": {
              "Name": "IGW",
              "owner": "vinod"
            },
            "tags_all": {
              "Name": "IGW",
              "owner": "vinod"
            },
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "dependencies": [
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec4e7657e6f0c73",
            "association_id": "eipassoc-06e6ec3f3093f4c88",
            "connectivity_type": "public",
            "id": "nat-0018a52afaafb9f96",
            "network_interface_id": "eni-06120f8892dde34cf",
            "private_ip": "10.0.3.98",
            "public_ip": "34.239.9.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa01d974a4407e26",
            "tags": {
              "Name": "NAT Gateway",
              "Owner": "Vinod"
            },
            "tags_all": {
              "Name": "NAT Gateway",
              "Owner": "Vinod"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:route-table/rtb-05f23dd2cd83ea85a",
            "id": "rtb-05f23dd2cd83ea85a",
            "owner_id": "458419607076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0018a52afaafb9f96",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:route-table/rtb-03ab2291f0acd446b",
            "id": "rtb-03ab2291f0acd446b",
            "owner_id": "458419607076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088310bb91dd11a7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dfc37a17834fe61",
            "route_table_id": "rtb-05f23dd2cd83ea85a",
            "subnet_id": "subnet-03bca1e66e34483ac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privateroute",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation_b",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07529e65f3f89e88a",
            "route_table_id": "rtb-05f23dd2cd83ea85a",
            "subnet_id": "subnet-03a9d74e9339d2434"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privateroute",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicassociation_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0870ae7bc90384420",
            "route_table_id": "rtb-03ab2291f0acd446b",
            "subnet_id": "subnet-0fa01d974a4407e26"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroute",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicassociation_b",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de18ab0cf25e5c3a",
            "route_table_id": "rtb-03ab2291f0acd446b",
            "subnet_id": "subnet-0bd01bd3dcc7c2b28"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroute",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:subnet/subnet-03bca1e66e34483ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bca1e66e34483ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458419607076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet",
              "subnet": "private-us-east-1a"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "subnet": "private-us-east-1a"
            },
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "dependencies": [
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:subnet/subnet-03a9d74e9339d2434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a9d74e9339d2434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458419607076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet",
              "subnet": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "subnet": "private-us-east-1b"
            },
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "dependencies": [
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:subnet/subnet-0fa01d974a4407e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa01d974a4407e26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458419607076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet",
              "subnet": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "subnet": "public-us-east-1a"
            },
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "dependencies": [
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:subnet/subnet-0bd01bd3dcc7c2b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd01bd3dcc7c2b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458419607076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet",
              "subnet": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "subnet": "public-us-east-1b"
            },
            "vpc_id": "vpc-0f75836ee7c86c9aa"
          },
          "dependencies": [
            "aws_vpc.mycustomvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mycustomvpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458419607076:vpc/vpc-0f75836ee7c86c9aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d154a4490e56ad7e",
            "default_route_table_id": "rtb-0239fb174935a2e25",
            "default_security_group_id": "sg-05e5a80f7c4662f97",
            "dhcp_options_id": "dopt-077b1d9ea0f5fb912",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f75836ee7c86c9aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0239fb174935a2e25",
            "owner_id": "458419607076",
            "tags": {
              "Name": "my custom VPC",
              "owner": "vinod"
            },
            "tags_all": {
              "Name": "my custom VPC",
              "owner": "vinod"
            }
          }
        }
      ]
    }
  ]
}